@@ -65,8 +65,7 @@
 #port 1883
 
 # The maximum number of client connections to allow. This is 
-# currently a global setting, regardless of the number of ports 
-# that mosquitto is listening on.
+# a per listener setting.
 # Default is -1, which means unlimited connections.
 # Note that other process limits mean that unlimited connections 
 # are not really possible. Typically the default maximum number of 
@@ -88,6 +87,14 @@
 # interface. By default, mosquitto will listen on all interfaces.
 # listener port-number [ip address/host name]
 #listener
+
+# The maximum number of client connections to allow. This is 
+# a per listener setting.
+# Default is -1, which means unlimited connections.
+# Note that other process limits mean that unlimited connections 
+# are not really possible. Typically the default maximum number of 
+# connections possible is around 1024.
+#max_connections -1
 
 # The listener can be restricted to operating within a topic hierarchy using
 # the mount_point option. This is achieved be prefixing the mount_point string
